test/Fail/Imports/Level.agda
------------------------------------------------------------------------
-- Universe levels
------------------------------------------------------------------------

module Imports.Level where

open import Agda.Primitive using (Level; _⊔_) renaming (lzero to zero; lsuc to suc)

